MyToontown/py2/logs/tt2016-140817_200743.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
Traceback (most recent call last):
  File "/usr/lib/python2.7/runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "/usr/lib/python2.7/runpy.py", line 72, in _run_code
    exec code in run_globals
  File "/Users/mauriceflannery/Documents/MyToontown/Toontown2016/toontown/toonbase/ToontownStart.py", line 76, in <module>
    import ToontownGlobals
  File "toontown/toonbase/ToontownGlobals.py", line 1, in <module>
    import TTLocalizer
  File "toontown/toonbase/TTLocalizer.py", line 22, in <module>
    from toontown.toonbase.TTLocalizerEnglish import *
  File "toontown/toonbase/TTLocalizerEnglish.py", line 8276
    'Tweaking 'SPLAT' sounds',
                   ^
SyntaxError: invalid syntax
